// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickLabelPanel should render with thesaurus 1`] = `
<div
  className="content-header"
>
  <div
    className="content-header-title"
  >
    <Connect(I18NLink)
      className="btn btn-default"
      to="/settings/dictionaries/cockpit/abc"
    >
      <Connect(Icon)
        icon="arrow-left"
      />
       
      <span
        className="btn-label"
      >
        <Translate
          context="System"
        >
          Back to thesaurus
        </Translate>
      </span>
    </Connect(I18NLink)>
    <h1>
      <span
        className="large"
      >
        <Translate
          context="System"
        >
          Quick labeling for
        </Translate>
         
        <b>
          thesaurus1
        </b>
      </span>
    </h1>
  </div>
</div>
`;

exports[`QuickLabelPanel should render without thesaurus 1`] = `
<div
  className="content-header"
>
  <div
    className="content-header-title"
  >
    <h1>
      <Translate
        context="System"
      >
        Ooops... please go
      </Translate>
       
      <Connect(I18NLink)
        className="btn btn-default"
        to="/settings/dictionaries"
      >
        <Connect(Icon)
          icon="arrow-left"
        />
         
        <span
          className="btn-label"
        >
          <Translate
            context="System"
          >
            Back to thesauri
          </Translate>
        </span>
      </Connect(I18NLink)>
    </h1>
  </div>
</div>
`;
